--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,10 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Weather App</title>
   </head>
   <body>
-    <script>
-      console.log(window.location);
-    </script>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script></script>
     <div id="root"></div>
   </body>
 </html>
